tdf#112033: enable the xml source feature when the experimental features are enabled

Change-Id: I066b2927c5e22664b7a4e96549da3a02ec4c99d3
Reviewed-on: https://gerrit.libreoffice.org/41085
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 65722772f00a40b8ca8adf21e31c22295ef7d215)